Work on Cartesian plane project